# rag101

./: 1_intro_to_embeddings.py  2_storing_embeddings.py  3_vecdb.py  4_chunking.py  5_embedding_and_storing_chunks.py  6_lm.py  7_RAG.py  README.md  pyproject.toml  rag_tutorial.py
__marimo__/session/: rag_tutorial.py.json
