[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Vasudev Gupta",email = "guptavasudelhi@gmail.com"}
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "pypdf (>=6.7.4,<7.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "pinecone (>=8.1.0,<9.0.0)",
    "marimo (>=0.10.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
